  MaximumMatch, reverted back to a past version, a bug must have creeped in during refactoring
  UiUtil.showInDialog() now calls the close action on windowClosed() instead of windowClosing()
  EntityPanel, navigation and resizing actions added to editControlPanel as well, some minor behavioural changes
  AbstractFilteredTableModel, filterContents() now sorts the table model afterwards
  SearchFieldHint renamed to TextFieldHint, some fields/methods renamed, hintForegroundColor field added
  SearchType.getImageName() removed, getCaption() added, search type images removed
  ColumnSearchPanel, panel initialization bug fixed, stTwoSearchFields not set correctly on init
  ColumnSearchPanel/Model and related classes refactored a bit
  Global renaming, 'StateObserver get...State()' renamed to 'StateObserver get...Observer()'
  DefaultEntityTableSearchModel initializes property search models for all properties, hidden as well
  DefaultEntityTableSearchModel.simpleSearchString field added (moved from EntityTableSearchSimplePanel)
  EntityImpl.setValue() bug fixed, propagates fk values before setting the actual entity value, otherwise isValueNull(FK_PROP) tells lies during the value change event firing
  EntityTableSearchModel.hasSearchStateChanged() added
  DefaultEntityEditModel.prepareForUpdate/Insert() added
  EntityTableSearchSimplePanel and EntityTableSearchAdvancedPanel merged into EntityTableSearchPanel, interface removed
  AbstractDatabase.createConnection() now throws DatabaseException instead of SQLException, for localization, changes bubbled all the way up
  EntityApplicationPanel, better handling of exceptions during startup
  DefaultEntityLookupModel.getEntitySelectCriteria() ignored any additional criteria in case of a wildcard search string
  AbstractBeanValueLink.getValueClass() added
  IntBeanValueLink/DoubleBeanValueLink, usePrimitives parameter added to constructor, tests added